--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "type": "magento2-module",
   "license": "MIT",
   "require": {
-    "php": "^7.4|^8.1",
-    "symfony/var-dumper": "^5.4"
+    "php": "^7.4|>=8.1",
+    "symfony/var-dumper": "^5.4|^6.0"
   },
   "autoload": {
     "files": [
